syntax = "proto3";

package pbmse;

// JWS
// Protocol buffer message signing and encryption
message SignedMessage {
    bytes payload = 1;
    repeated Signature signatures = 2;

    message Header {
        string algorithm = 1;
        string key_id = 2;
        string nonce = 3;
    }
}

message Signature {
    oneof header {
        bytes protected = 1;
        SignedMessage.Header unprotected = 2;
    }
    bytes signature = 3;
}

// JWE

message EncryptedMessage {
    bytes iv = 1                                    [json_name="iv"];
    bytes aad = 2                                   [json_name="aad"];
    bytes ciphertext = 3                            [json_name="ciphertext"];
    bytes tag = 4;
    repeated EncryptionRecipient recipients = 5;
}

message EncryptionHeader {
    EncryptionMode mode = 1                         [json_name="enc"];
    EncryptionAlgorithm algorithm = 2               [json_name="alg"];
    string key_id = 3                               [json_name="kid"];
    string sender_key_id = 4                        [json_name="skid"];
}

message EncryptionRecipient {
    EncryptionHeader header = 1                     [json_name="unprotected"];
    bytes content_encryption_key = 2                [json_name="cek"];
}

enum EncryptionMode {
    direct = 0;
    content_encryption_key = 1;
}

enum EncryptionAlgorithm {
    xchacha20poly1305 = 0;
    aes_gcm = 1;
}
