syntax = "proto3";
package services.verifiablecredentials.v1;

option csharp_namespace = "Trinsic.Services.VerifiableCredentials.V1";
option go_package = "services/verifiablecredentials/v1/credential";
option java_package = "trinsic.services.verifiablecredentials.v1";
option java_multiple_files = true;
option objc_class_prefix = "TrinsicServices";

import "services/options/field-options.proto";

// Request to sign a JSON-LD Credential using public key tied to caller
message IssueRequest {
    // Valid JSON-LD Credential document to be signed, in string form
    string document_json = 1;
}

// Response to `IssueRequest`
message IssueResponse {
    // Verifiable Credential document, signed with public key
    // tied to caller of `IssueRequest`
    string signed_document_json = 1;
}

// Request to create and sign a JSON-LD Verifiable Credential from a template using public key tied to caller
message IssueFromTemplateRequest {
    // ID of template to use
    string template_id = 1;

    // JSON document string with keys corresponding to the fields of
    // the template referenced by `template_id`
    string values_json = 2;

    // Governance framework ID to use with issuance of this credential.
    // If specified, the issued credential will contain extended issuer
    // metadata with membership info for the given ecosystem governance framework (EGF)
    string framework_id = 3 [(options.optional) = true];
}

// Response to `IssueFromTemplateRequest`
message IssueFromTemplateResponse {
    // Verifiable Credential document, in JSON-LD form,
    // constructed from the specified template and values; signed
    // with public key tied to caller of `IssueFromTemplateRequest`
    string document_json = 1;
}

// Request to create a proof for a Verifiable Credential using public key tied to caller.
// Either `item_id` or `document_json` may be provided, not both.
message CreateProofRequest {
    // A valid JSON-LD frame describing which fields should be
    // revealed in the generated proof.
    // If unspecified, all fields in the document will be revealed
    string reveal_document_json = 1;

    // Specify the input to be used to derive this proof.
    // Input can be an existing item in the wallet or an input document
    oneof proof {
        // ID of wallet item stored in a Trinsic cloud wallet
        string item_id = 2;
        // A valid JSON-LD Verifiable Credential document string
        // with an unbound signature. The proof will be derived from this
        // document directly. The document will not be stored in the wallet.
        string document_json = 3;
    }

    // Nonce value used to derive the proof. If not specified, a random nonce will be generated.
    // This value may be represented in base64 format in the proof model.
    bytes nonce = 10 [(options.optional) = true];
}

// Response to `CreateProofRequest`
message CreateProofResponse {
    // Valid JSON-LD proof for the specified credential
    string proof_document_json = 1;
}

// Request to verify a proof
message VerifyProofRequest {
    // JSON-LD proof document string to verify
    string proof_document_json = 1;
}

// Response to `VerifyProofRequest`
message VerifyProofResponse {
    // Whether all validations in `validation_results` passed
    bool is_valid = 1;

    // Use `validation_results` instead
    repeated string validation_messages = 2 [deprecated = true];

    // Results of each validation check performed,
    // such as schema conformance, revocation status, signature, etc.
    // Detailed results are provided for failed validations.
    map<string, ValidationMessage> validation_results = 3;
}

// Result of a validation check on a proof
message ValidationMessage {
    // Whether this validation check passed
    bool is_valid = 1;

    // If validation failed, contains messages explaining why
    repeated string messages = 2;
}

// Request to send a document to another user's wallet
message SendRequest {
    oneof delivery_method {
        // Email address of user to send item to
        string email = 1;
        // DID of recipient (presently unsupported)
        string did_uri = 2 [deprecated=true];
        // DIDComm out-of-band invitation JSON (presently unsupported)
        string didcomm_invitation_json = 3 [deprecated=true];
    }
    // Send email notification that credential has been sent to a wallet
    bool send_notification = 4;

    // JSON document to send to recipient
    string document_json = 100;

}

// Response to `SendRequest`
message SendResponse {
}

// Request to update a credential's revocation status
message UpdateStatusRequest {
    // Credential Status ID to update. This is not the same as the credential's ID.
    string credential_status_id = 1;

    // New revocation status of credential
    bool revoked = 2;
}

// Response to `UpdateStatusRequest`
message UpdateStatusResponse {
}

// Request to check a credential's revocation status
message CheckStatusRequest {
    // Credential Status ID to check. This is not the same as the credential's ID.
    string credential_status_id = 1;
}

// Response to `CheckStatusRequest`
message CheckStatusResponse {
    // The credential's revocation status
    bool revoked = 1;
}

service VerifiableCredential {
    // Sign and issue a verifiable credential from a submitted document.
    // The document must be a valid JSON-LD document.
    rpc Issue(IssueRequest) returns (IssueResponse);

    // Sign and issue a verifiable credential from a pre-defined template.
    // This process will also add schema validation and
    // revocation registry values to the credential.
    rpc IssueFromTemplate(IssueFromTemplateRequest) returns (IssueFromTemplateResponse);

    // Check credential status in the revocation registry
    rpc CheckStatus(CheckStatusRequest) returns (CheckStatusResponse);

    // Update credential status by setting the revocation value
    rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse);

    // Create a proof from a signed document that is a valid
    // verifiable credential and contains a signature from which a proof can be derived.
    rpc CreateProof(CreateProofRequest) returns (CreateProofResponse);

    // Verifies a proof by checking the signature value, and if possible schema validation,
    // revocation status, and issuer status against a trust registry
    rpc VerifyProof(VerifyProofRequest) returns (VerifyProofResponse);

    // Sends a document directly to a user's email within the given ecosystem
    rpc Send(SendRequest) returns (SendResponse);
}
